// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<DeviceDetails /> renders a verified device 1`] = `
<div>
  <div
    class="mx_DeviceDetails"
    data-testid="device-detail-my-device"
  >
    <section
      class="mx_DeviceDetails_section"
    >
      <div
        class="mx_DeviceDetailHeading"
        data-testid="device-detail-heading"
      >
        <h4
          class="mx_Heading_h4"
        >
          my-device
        </h4>
        <div
          class="mx_AccessibleButton mx_DeviceDetailHeading_renameCta mx_AccessibleButton_hasKind mx_AccessibleButton_kind_link_inline"
          data-testid="device-heading-rename-cta"
          role="button"
          tabindex="0"
        >
          Rename
        </div>
      </div>
      <div
        class="mx_DeviceSecurityCard"
      >
        <div
          class="mx_DeviceSecurityCard_icon Verified"
        >
          <svg
            fill="currentColor"
            height="16"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M11.106 2.447a2 2 0 0 1 1.789 0l6 3A2 2 0 0 1 20 7.237V12c0 6.742-5.773 9.246-7.51 9.846-.32.111-.66.111-.98 0C9.774 21.246 4 18.743 4 12V7.236a2 2 0 0 1 1.105-1.789zm4.601 6.846a1 1 0 0 0-1.414 0L11 12.586l-1.293-1.293a1 1 0 0 0-1.414 1.414l2 2a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0 0-1.414"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="mx_DeviceSecurityCard_content"
        >
          <p
            class="mx_DeviceSecurityCard_heading"
          >
            Verified session
          </p>
          <p
            class="mx_DeviceSecurityCard_description"
          >
            This session is ready for secure messaging.
            <div
              class="mx_AccessibleButton mx_LearnMore_button mx_AccessibleButton_hasKind mx_AccessibleButton_kind_link_inline"
              role="button"
              tabindex="0"
            >
              Learn more
            </div>
          </p>
        </div>
      </div>
    </section>
    <section
      class="mx_DeviceDetails_section"
    >
      <p
        class="mx_DeviceDetails_sectionHeading"
      >
        Session details
      </p>
      <table
        class="mx_DeviceDetails_metadataTable"
        data-testid="device-detail-metadata-session"
      >
        <tbody>
          <tr>
            <td
              class="mxDeviceDetails_metadataLabel"
            >
              Session ID
            </td>
            <td
              class="mxDeviceDetails_metadataValue"
            >
              my-device
            </td>
          </tr>
        </tbody>
      </table>
    </section>
    <section
      class="mx_DeviceDetails_section"
    >
      <div
        class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_danger_inline"
        data-testid="device-detail-sign-out-cta"
        role="button"
        tabindex="0"
      >
        <span
          class="mx_DeviceDetails_signOutButtonContent"
        >
          Sign out of this session
        </span>
      </div>
    </section>
  </div>
</div>
`;

exports[`<DeviceDetails /> renders device with metadata 1`] = `
<div>
  <div
    class="mx_DeviceDetails"
    data-testid="device-detail-my-device"
  >
    <section
      class="mx_DeviceDetails_section"
    >
      <div
        class="mx_DeviceDetailHeading"
        data-testid="device-detail-heading"
      >
        <h4
          class="mx_Heading_h4"
        >
          My Device
        </h4>
        <div
          class="mx_AccessibleButton mx_DeviceDetailHeading_renameCta mx_AccessibleButton_hasKind mx_AccessibleButton_kind_link_inline"
          data-testid="device-heading-rename-cta"
          role="button"
          tabindex="0"
        >
          Rename
        </div>
      </div>
      <div
        class="mx_DeviceSecurityCard"
      >
        <div
          class="mx_DeviceSecurityCard_icon Unverified"
        >
          <svg
            fill="currentColor"
            height="16"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 17q.424 0 .713-.288A.97.97 0 0 0 13 16a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 15a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 16q0 .424.287.712.288.288.713.288m0-4q.424 0 .713-.287A.97.97 0 0 0 13 12V8a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 7a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 8v4q0 .424.287.713.288.287.713.287m0 9a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22"
            />
          </svg>
        </div>
        <div
          class="mx_DeviceSecurityCard_content"
        >
          <p
            class="mx_DeviceSecurityCard_heading"
          >
            Unverified session
          </p>
          <p
            class="mx_DeviceSecurityCard_description"
          >
            Verify or sign out from this session for best security and reliability.
            <div
              class="mx_AccessibleButton mx_LearnMore_button mx_AccessibleButton_hasKind mx_AccessibleButton_kind_link_inline"
              role="button"
              tabindex="0"
            >
              Learn more
            </div>
          </p>
        </div>
      </div>
    </section>
    <section
      class="mx_DeviceDetails_section"
    >
      <p
        class="mx_DeviceDetails_sectionHeading"
      >
        Session details
      </p>
      <table
        class="mx_DeviceDetails_metadataTable"
        data-testid="device-detail-metadata-session"
      >
        <tbody>
          <tr>
            <td
              class="mxDeviceDetails_metadataLabel"
            >
              Session ID
            </td>
            <td
              class="mxDeviceDetails_metadataValue"
            >
              my-device
            </td>
          </tr>
          <tr>
            <td
              class="mxDeviceDetails_metadataLabel"
            >
              Last activity
            </td>
            <td
              class="mxDeviceDetails_metadataValue"
            >
              Sun 22:34
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="mx_DeviceDetails_metadataTable"
        data-testid="device-detail-metadata-application"
      >
        <thead>
          <tr>
            <th>
              Application
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="mxDeviceDetails_metadataLabel"
            >
              Name
            </td>
            <td
              class="mxDeviceDetails_metadataValue"
            >
              Element Web
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="mx_DeviceDetails_metadataTable"
        data-testid="device-detail-metadata-device"
      >
        <thead>
          <tr>
            <th>
              Device
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="mxDeviceDetails_metadataLabel"
            >
              Model
            </td>
            <td
              class="mxDeviceDetails_metadataValue"
            >
              Iphone X
            </td>
          </tr>
          <tr>
            <td
              class="mxDeviceDetails_metadataLabel"
            >
              Operating system
            </td>
            <td
              class="mxDeviceDetails_metadataValue"
            >
              Windows 95
            </td>
          </tr>
          <tr>
            <td
              class="mxDeviceDetails_metadataLabel"
            >
              Browser
            </td>
            <td
              class="mxDeviceDetails_metadataValue"
            >
              Firefox 100
            </td>
          </tr>
          <tr>
            <td
              class="mxDeviceDetails_metadataLabel"
            >
              IP address
            </td>
            <td
              class="mxDeviceDetails_metadataValue"
            >
              123.456.789
            </td>
          </tr>
        </tbody>
      </table>
    </section>
    <section
      class="mx_DeviceDetails_section"
    >
      <div
        class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_danger_inline"
        data-testid="device-detail-sign-out-cta"
        role="button"
        tabindex="0"
      >
        <span
          class="mx_DeviceDetails_signOutButtonContent"
        >
          Sign out of this session
        </span>
      </div>
    </section>
  </div>
</div>
`;

exports[`<DeviceDetails /> renders device without metadata 1`] = `
<div>
  <div
    class="mx_DeviceDetails"
    data-testid="device-detail-my-device"
  >
    <section
      class="mx_DeviceDetails_section"
    >
      <div
        class="mx_DeviceDetailHeading"
        data-testid="device-detail-heading"
      >
        <h4
          class="mx_Heading_h4"
        >
          my-device
        </h4>
        <div
          class="mx_AccessibleButton mx_DeviceDetailHeading_renameCta mx_AccessibleButton_hasKind mx_AccessibleButton_kind_link_inline"
          data-testid="device-heading-rename-cta"
          role="button"
          tabindex="0"
        >
          Rename
        </div>
      </div>
      <div
        class="mx_DeviceSecurityCard"
      >
        <div
          class="mx_DeviceSecurityCard_icon Unverified"
        >
          <svg
            fill="currentColor"
            height="16"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 17q.424 0 .713-.288A.97.97 0 0 0 13 16a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 15a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 16q0 .424.287.712.288.288.713.288m0-4q.424 0 .713-.287A.97.97 0 0 0 13 12V8a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 7a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 8v4q0 .424.287.713.288.287.713.287m0 9a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22"
            />
          </svg>
        </div>
        <div
          class="mx_DeviceSecurityCard_content"
        >
          <p
            class="mx_DeviceSecurityCard_heading"
          >
            Unverified session
          </p>
          <p
            class="mx_DeviceSecurityCard_description"
          >
            Verify or sign out from this session for best security and reliability.
            <div
              class="mx_AccessibleButton mx_LearnMore_button mx_AccessibleButton_hasKind mx_AccessibleButton_kind_link_inline"
              role="button"
              tabindex="0"
            >
              Learn more
            </div>
          </p>
        </div>
      </div>
    </section>
    <section
      class="mx_DeviceDetails_section"
    >
      <p
        class="mx_DeviceDetails_sectionHeading"
      >
        Session details
      </p>
      <table
        class="mx_DeviceDetails_metadataTable"
        data-testid="device-detail-metadata-session"
      >
        <tbody>
          <tr>
            <td
              class="mxDeviceDetails_metadataLabel"
            >
              Session ID
            </td>
            <td
              class="mxDeviceDetails_metadataValue"
            >
              my-device
            </td>
          </tr>
        </tbody>
      </table>
    </section>
    <section
      class="mx_DeviceDetails_section"
    >
      <div
        class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_danger_inline"
        data-testid="device-detail-sign-out-cta"
        role="button"
        tabindex="0"
      >
        <span
          class="mx_DeviceDetails_signOutButtonContent"
        >
          Sign out of this session
        </span>
      </div>
    </section>
  </div>
</div>
`;
